Remove WebFileChooserParams::initialValue

On the Chromium side, FileSelectHelper::RunFileChooser asserts that
default filenames should only be specified for "Save" choosers. Blink
doesn't use those ("download" is a browser thing) so just remove
the field which would be ignored anyway. (Remembering the last used
directory is done through other means in the browser.)

BUG=632454,655298

Review-Url: https://codereview.chromium.org/2446743002
Cr-Commit-Position: refs/heads/master@{#427814}

Former-commit-id: 14785d90f691b2b20d07612a62ba35a630bbb9ac